2004-06-07  Dennis Smit  <ds@nerds-incorporated.org>

	* weather.c (weather_info_config_read):
	Initializing some variables to fix crasher on
	location change.

	Patch by: Gareth Owen  <gowen72@yahoo.com>

	Fixes bug #143869.

2004-06-07  Dennis Smit  <ds@nerds-incorporated.org>

	* gweather-pref.c (gweather_pref_create):
	Ally fixes by: Padraig 'O brain <padraig.obriain@sun.com>.

	Fixes bug 134929.

2004-06-07  Dennis Smit  <ds@nerds-incorporated.org>

	* gweather-applet.c (gweather_applet_create):
	Use alignment instead of hbox for the container
	so the applet gets centered on vertical panels.

	Patch by: Gareth Owen  <gowen72@yahoo.com>

	Fixes bug #133771.

2004-06-07  Dennis Smit  <ds@nerds-incorporated.org>
	
	* weather.c: Changing the CLOUD_RE_STR define.
	(metar_tok_cloud): Adding support for NSC, sky clear
	tag.

	Patch by: Fabrice Bellet  <fabrice@bellet.info>

	Fixes bug #134452.

2004-06-07  Dennis Smit  <ds@nerds-incorporated.org>

	patch by: Kaushal Kumar  <kaushal.kumar@wipro.com>

	* Locations: Added Bangalore (VOBG) in India.

2004-06-04  Kaushal Kumar  <kaushal.kumar@wipro.com>

	* Locations: Added Karlstad (ESOK) in Sweden. 

	Patch by: Pontus Ullgren <bugzilla@pontus.ullgren.com>

	Fixes bug #143678.

2004-06-04  Kaushal Kumar  <kaushal.kumar@wipro.com>

	Moved Ornskoldsvik (ESNO) and Ostersund (ESPC) up the 
	list to have the locations sorted alphabetically.

2004-06-03  Dennis Smit  <ds@nerds-incorporated.org>

	* gweather-applet.c (place_widgets): Fixed up applet
	placement majorly.

	Patch by: Nathan Fredrickson  <nathan@silverorange.com>

	Fixes bug #142945.

2004-06-03  Dennis Smit  <ds@nerds-incorporated.org>

	* weather.c: Changed Kph to km/h in the
	WINDSPEED_UNIT_STR define. Kph is not a metric unit.

	Fixes bug #142919.

2004-06-03  Dennis Smit  <ds@nerds-incorporated.org>

	* gweather-dialog.c (response_cb): Add a response for the
	update button.

	(gweather_dialog_create): Add an update button to the forecast
	dialog.
