@@ -1,3 +1,10 @@
+2004-06-09  Dennis Smit  <ds@nerds-incorporated.org>
+	Fix for transparant radar images.
+
+	Patch by: Gareth Owen  <gowen72@yahoo.com>
+
+	Fixes bug #139216.
+
 2004-06-07  Dennis Smit  <ds@nerds-incorporated.org>
 
 	* weather.c (weather_info_config_read):
